samples/_failures_safe/1761659225_9947bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71064bb8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_71064bb8.c:173:13: error: expected declaration or statement at end of input
  173 |             read_operator(lexer);
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_71064bb8.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71064bb8.c:173:13: error: expected declaration or statement at end of input
